--- a/app/jade/my-booking.jade
+++ b/app/jade/my-booking.jade
@@ -9,7 +9,7 @@ block main
     .banner
       h2.head-title.text-white.text-center My Account
 
-    .my-booking-page
+    .my-booking-page.sidebar-gray
       .wrapping-gray
       .container.display-table
 
