--- a/app/less/helper/form.less
+++ b/app/less/helper/form.less
@@ -205,7 +205,8 @@
       }
     }
 
-    &.name {
+    &.name,
+    &.cc-number {
       width: 320px;
     }
 
@@ -219,6 +220,10 @@
 
     &.gender {
       width: 150px;
+    }
+
+    &.ccv {
+      width: 145px
     }
 
     &.selectbox {
