--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -320,5 +320,39 @@
       height: 16px;
       background-position: -592px -176px
     }
+
+    &-american-express {
+      width: 33px;
+      height: 21px;
+      background-image: url(../img/card-american-express.png);
+      background-repeat: no-repeat;
+      background-size: 33px 21px;
+    }
+
+    &-visa {
+      width: 33px;
+      height: 21px;
+      background-image: url(../img/card-visa.png);
+      background-repeat: no-repeat;
+      background-size: 33px 21px;
+    }
+
+    &-master-card {
+      width: 33px;
+      height: 21px;
+      background-image: url(../img/card-master-card.png);
+      background-repeat: no-repeat;
+      background-size: 33px 21px;
+    }
+
+    &-pencil {
+      background-position: -616px -175px;
+      width: 17px;
+      height: 17px;
+
+      &-black {
+        background-position: -640px -175px;
+      }
+    }
   }
 }
