--- a/app/jade/form/flight.jade
+++ b/app/jade/form/flight.jade
@@ -9,9 +9,9 @@
         span to
         input(type="text", value="type city", size="5")
         span on
-        input(type="text", value="02/01/15", size="5")
+        input.date(type="text", value="type date", readonly="readonly", size="5")
         span , returning on
-        input(type="text", value="type date", size="5")
+        input.date(type="text", value="type date", readonly="readonly", size="5")
         span  for
         input(type="text", value="one", name="activity", size="5")
         span  adult and
