--- a/app/jade/include/header-payment.jade
+++ b/app/jade/include/header-payment.jade
@@ -20,9 +20,11 @@ div.navbar.navbar-fixed-top(role='navigation')
           include ../form/flight
 
         li
-          a.hotel(href='#hotels')
+          a.hotel(href='hotels-search.html')
             i.ico.ico-hotel
             span.block BOOK HOTELS
+
+          include ../form/hotel
         li
           a(href='#documents')
             i.ico.ico-document
