--- a/app/less/helper/form.less
+++ b/app/less/helper/form.less
@@ -1,5 +1,6 @@
 .tour-form,
-.flight-form {
+.flight-form,
+.hotel-form {
   &.inline-text {
     background-color: #007589;
     height: 220px;
@@ -122,7 +123,8 @@
   }
 }
 
-.flight-form {
+.flight-form,
+.hotel-form {
   &.inline-text {
     .right {
       .btn {
