--- a/app/css/sapta-tour.css
+++ b/app/css/sapta-tour.css
@@ -2837,6 +2837,12 @@ fieldset[disabled] .form-control.bg-white-only {
   width: 12px;
   height: 12px;
   background-position: -490px -18px;
+  margin-right: 5px;
+}
+.bg-white .ico-star-yellow {
+  width: 17px;
+  height: 17px;
+  background-position: -692px -176px;
 }
 .bg-white .ico-download-voucher {
   width: 233px;
@@ -2896,6 +2902,60 @@ fieldset[disabled] .form-control.bg-white-only {
 }
 .bg-white .ico-pencil-black {
   background-position: -640px -175px;
+}
+.bg-white .ico-rating {
+  width: 15px;
+  height: 15px;
+  margin-right: 1px;
+  background-position: -657px -97px;
+}
+.bg-white .ico-rating-big {
+  width: 21px;
+  height: 21px;
+}
+.bg-white .ico-rating-big-fill {
+  background-position: -591px -67px;
+}
+.bg-white .ico-rating-fill {
+  background-position: -625px -97px;
+}
+.bg-white .ico-rating-fill-half {
+  background-position: -641px -97px;
+}
+.bg-white .ico-flag {
+  width: 11px;
+  height: 14px;
+  background-position: -678px -175px;
+}
+.bg-white .ico-up-arrow {
+  width: 10px;
+  height: 15px;
+  background-position: -664px -176px;
+}
+.bg-white .ico-up-circle-arrow {
+  width: 24px;
+  height: 24px;
+  background-position: -251px -205px;
+}
+.bg-white .ico-down-circle-arrow {
+  width: 24px;
+  height: 24px;
+  background-position: -279px -204px;
+}
+.bg-white .ico-right-circle-arrow-md {
+  width: 26px;
+  height: 26px;
+  background-position: -219px -205px;
+}
+.bg-white .ico-down-circle-arrow-md {
+  width: 26px;
+  height: 26px;
+  background-position: -220px -173px;
+}
+.bg-white .ico-price-range {
+  width: 40px;
+  height: 73px;
+  background: url(../img/price-range-icon.png) no-repeat 0 0;
 }
 .btn {
   border-radius: 0;
@@ -6108,6 +6168,167 @@ html[xmlns] .flexslider .slides {
 .credit-card-list .form-edit-credit-card .boxing.phone-number,
 .credit-card-list .form-edit-credit-card .boxing.post-code {
   width: 200px;
+}
+.hotel-page .tip-inquiry {
+  margin-top: 0;
+}
+.sidebar-hotel {
+  overflow-x: hidden;
+}
+.sidebar-hotel .wrapping-gray {
+  background: #f4f4f4;
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+}
+.sidebar-hotel .display-table {
+  display: table;
+}
+.sidebar-hotel .display-cell {
+  display: table-cell;
+  vertical-align: top;
+  padding-top: 40px;
+}
+.sidebar-hotel .content-right {
+  position: relative;
+  z-index: 1;
+  width: 760px;
+  padding-left: 25px;
+  background-color: #fff;
+}
+.sidebar-hotel .aside {
+  width: 220px;
+  background: #f4f4f4 url(../img/bg-hotel-sidebar.png) repeat-y top right;
+  position: relative;
+}
+.sidebar-hotel .aside form {
+  padding-right: 30px;
+}
+.sidebar-hotel .aside form .boxing {
+  background-color: #fff;
+  width: 100%;
+}
+.sidebar-hotel .aside form .b {
+  border-color: #d0d0d0;
+}
+.sidebar-hotel .aside form .radio label span.inline {
+  padding-top: 3px;
+}
+.sidebar-hotel .aside form .checkbox .ico {
+  margin-top: 3px;
+}
+.sidebar-hotel .aside form .price-range input {
+  padding-left: 25px;
+}
+.sidebar-hotel .aside form .price-range .placeholder {
+  left: 12px;
+  bottom: 9px;
+  font-size: 11px;
+  text-transform: uppercase;
+}
+.sidebar-hotel .aside form .price-range .boxing {
+  width: 150px;
+}
+.sidebar-hotel .aside form .price-range .ico-price-range {
+  right: -10px;
+  top: 26px;
+}
+.sidebar-hotel .aside .toggle .ico {
+  right: 0;
+  top: 0;
+  margin-top: -7px;
+  cursor: pointer;
+}
+.search-result-hotel-block .hotem-item {
+  height: 130px;
+  -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 4px 7px 0px rgba(216, 216, 216, 0.6);
+  box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 4px 7px 0px rgba(216, 216, 216, 0.6);
+}
+.search-result-hotel-block .hotem-item .column {
+  height: 130px;
+  border-color: #d8d8d8;
+}
+.search-result-hotel-block .hotem-item .column.picture-thumb {
+  width: 130px;
+  padding: 3px;
+  border-right: 1px solid rgba(230, 230, 230, 0.9);
+}
+.search-result-hotel-block .hotem-item .column.picture-thumb img {
+  width: 100%;
+  height: 100%;
+}
+.search-result-hotel-block .hotem-item .column.hotel-info {
+  width: 330px;
+  padding: 15px 20px;
+  position: relative;
+}
+.search-result-hotel-block .hotem-item .column.hotel-info .hotel-name {
+  font-size: 18px;
+  color: #393030;
+  line-height: 22px;
+}
+.search-result-hotel-block .hotem-item .column.hotel-info .location {
+  font-size: 10px;
+  color: #8f3000;
+}
+.search-result-hotel-block .hotem-item .column.hotel-info .hotel-star {
+  line-height: 12px;
+}
+.search-result-hotel-block .hotem-item .column.hotel-info .fasilitas {
+  bottom: 15px;
+  right: 30px;
+  width: 260px;
+  text-align: right;
+}
+.search-result-hotel-block .hotem-item .column.rating {
+  width: 110px;
+  border-right: 1px solid rgba(230, 230, 230, 0.9);
+  border-left: 1px solid rgba(230, 230, 230, 0.9);
+}
+.search-result-hotel-block .hotem-item .column.rating .text-primary {
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+.search-result-hotel-block .hotem-item .column.pricing {
+  width: 123px;
+  color: #888;
+  font-size: 11px;
+}
+.search-result-hotel-block .hotem-item .column.pricing .block,
+.search-result-hotel-block .hotem-item .column.pricing label {
+  padding: 0 0 0 10px;
+}
+.search-result-hotel-block .hotem-item .column.pricing .price {
+  color: #158ea3;
+  line-height: 17px;
+}
+.search-result-hotel-block .hotem-item .column.pricing .price .currency {
+  font-size: 13px;
+  top: 0;
+}
+.search-result-hotel-block .hotem-item .column.pricing .price .rate {
+  margin-left: 5px;
+  font-size: 18px;
+}
+.search-result-hotel-block .hotem-item .column.pricing .price .rate small {
+  font-size: 12px;
+}
+.search-result-hotel-block .hotem-item .column.pricing a {
+  width: 100%;
+  border-top: 2px solid #52adbc;
+  margin-top: 5px;
+}
+.search-result-hotel-block .hotem-item .column.pricing a:hover,
+.search-result-hotel-block .hotem-item .column.pricing a:focus {
+  outline: 0;
+}
+.search-result-hotel-block .hotem-item .column.pricing a.text-primary {
+  color: #fff;
+  line-height: 43px;
+  background: #158ea3;
 }
 .datepicker {
   border-radius: 4px;
