--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -283,6 +283,13 @@
       width: 12px;
       height: 12px;
       background-position: -490px -18px;
+      margin-right: 5px;
+    }
+
+    &-star-yellow {
+      width: 17px;
+      height: 17px;
+      background-position: -692px -176px;
     }
 
     &-download-voucher {
@@ -353,6 +360,72 @@
       &-black {
         background-position: -640px -175px;
       }
+    }
+
+    &-rating {
+      width: 15px;
+      height: 15px;
+      margin-right: 1px;
+      background-position: -657px -97px;
+
+      &-big {
+        width: 21px;
+        height: 21px;
+
+        &-fill {
+          background-position: -591px -67px
+        }
+      }
+
+      &-fill {
+        background-position: -625px -97px;
+      }
+
+      &-fill-half {
+        background-position: -641px -97px;
+      }
+    }
+
+    &-flag {
+      width: 11px;
+      height: 14px;
+      background-position: -678px -175px;
+    }
+
+    &-up-arrow {
+      width: 10px;
+      height: 15px;
+      background-position: -664px -176px;
+    }
+
+    &-up-circle-arrow {
+      width: 24px;
+      height: 24px;
+      background-position: -251px -205px;
+    }
+
+    &-down-circle-arrow {
+      width: 24px;
+      height: 24px;
+      background-position: -279px -204px;
+    }
+
+    &-right-circle-arrow-md {
+      width: 26px;
+      height: 26px;
+      background-position: -219px -205px;
+    }
+
+    &-down-circle-arrow-md {
+      width: 26px;
+      height: 26px;
+      background-position: -220px -173px;
+    }
+
+    &-price-range {
+      width: 40px;
+      height: 73px;
+      background: url(../img/price-range-icon.png) no-repeat 0 0;
     }
   }
 }
